--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,9 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Dilpreet, this is my first webapp.
+            <h3>I have edited this locally</h3>
         </div>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
