--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,22 +2,34 @@
     <head>
         <title> Article One | Dilpreet Chawla </title>
         <meta name="viewport" content="width-device-width, initial-scale=1"/> 
+    <style>
+        .container {
+            max-width:800px;
+            margin:0 auto;
+            color:blue;
+            font-family:san-serif;
+        }    
+        
+    </style>
     </head> 
+
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h1>
-            Article One
-        </h1>
-        <div>
-            Feb 2, 2018 
-        </div>
-        <div>
-            <p>
-                This is the first article I wrote while creating this app.
-            </p>
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h1>
+                Article One
+            </h1>
+            <div>
+                Feb 2, 2018 
+            </div>
+            <div>
+                <p>
+                    This is the first article I wrote while creating this app.
+                </p>
+            </div>
         </div>
     </body>
 </html>
