--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,10 +4,13 @@
         <meta name="viewport" content="width-device-width, initial-scale=1"/> 
     <style>
         .container {
-            max-width:800px;
-            margin:0 auto;
-            color:blue;
-            font-family:san-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            color: #1c0077;
+            font-family: san-serif;
+            padding-top: 80px;
+            padding-left: 40px;
+            padding-right: 40px;
         }    
         
     </style>
