--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,19 +1,8 @@
 <html>
     <head>
         <title> Article One | Dilpreet Chawla </title>
-        <meta name="viewport" content="width-device-width, initial-scale=1"/> 
-    <style>
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            color: #1c0077;
-            font-family: san-serif;
-            padding-top: 80px;
-            padding-left: 40px;
-            padding-right: 40px;
-        }    
-        
-    </style>
+        <meta name="viewport" content="width-device-width, initial-scale=1"/>
+        <link href="/ui/style.css" rel="stylesheet" /> 
     </head> 
 
     <body>
