[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+            <img id="madi" src="https://scontent.fccu3-1.fna.fbcdn.net/v/t1.0-9/27857843_747458785460148_8698198755788028046_n.jpg?oh=f58fad74b778359103bc4fbe06cbc89c&oe=5B147FEB" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
