--- a/ui/index.html
+++ b/ui/index.html
@@ -4,15 +4,16 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id="madi" src="https://scontent.fccu3-1.fna.fbcdn.net/v/t1.0-9/27857843_747458785460148_8698198755788028046_n.jpg?oh=f58fad74b778359103bc4fbe06cbc89c&oe=5B147FEB" class="img-medium"/>
+        <div class="container">
+            <div class="center">
+                <img id="madi" src="https://scontent.fccu3-1.fna.fbcdn.net/v/t1.0-9/27857843_747458785460148_8698198755788028046_n.jpg?oh=f58fad74b778359103bc4fbe06cbc89c&oe=5B147FEB" class="img-medium"/>
+            </div>
+            <br>
+            <div class="center text-big bold">
+                Hi! I am Dilpreet, this is my first webapp.
+                <h3>I have edited this locally</h3>
+            </div>
         </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am Dilpreet, this is my first webapp.
-            <h3>I have edited this locally</h3>
-        </div>
-        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
