[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,14 +6,15 @@
     <body>
         <div class="container">
             <div class="center">
-                <img id="madi" src="https://scontent.fccu3-1.fna.fbcdn.net/v/t1.0-9/27857843_747458785460148_8698198755788028046_n.jpg?oh=f58fad74b778359103bc4fbe06cbc89c&oe=5B147FEB" class="img-medium"/>
+                <img id='madi'  class='img-medium' src='https://scontent.fccu3-1.fna.fbcdn.net/v/t1.0-9/27857843_747458785460148_8698198755788028046_n.jpg?oh=f58fad74b778359103bc4fbe06cbc89c&oe=5B147FEB' />
+                
             </div>
             <br>
             <div class="center text-big bold">
                 Hi! I am Dilpreet, this is my first webapp.
                 <h3>I have edited this locally</h3>
             </div>
-        </div>
+        </div>    
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
