[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img id='madi'  class='img-medium' src='https://scontent.fccu3-1.fna.fbcdn.net/v/t1.0-9/27857843_747458785460148_8698198755788028046_n.jpg?oh=f58fad74b778359103bc4fbe06cbc89c&oe=5B147FEB' />
+                <img id='madi'  class='img-medium' src='https://cdn.dribbble.com/users/74133/screenshots/1888531/avatar-cool_1x.jpg' />
                 
             </div>
             <br>
