--- a/ui/index.html
+++ b/ui/index.html
@@ -9,10 +9,15 @@
                 <img id='madi'  class='img-medium' src='https://cdn.dribbble.com/users/74133/screenshots/1888531/avatar-cool_1x.jpg' />
                 
             </div>
-            <br>
-            <div class="center text-big bold">
-                Hi! I am Dilpreet, this is my first webapp.
-                <h3>I have edited this locally</h3>
+            <hr/>
+            <h3>Personal</h3>
+            <div>Hi I am Dilpreet Chawla.</div>
+            <hr/>
+            <h3>Education</h3>
+            <div>I am a B.Tech CSE student at IIITKLY</div>
+            <hr/>
+            <div class="footer">
+                
             </div>
         </div>    
         <script type="text/javascript" src="/ui/main.js">
