[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img id='madi'  class='img-medium' src='https://cdn.dribbble.com/users/74133/screenshots/1888531/avatar-cool_1x.jpg' />
+                <img id='madi'  class='img-medium' src='https://pbs.twimg.com/profile_images/956494382898724864/JDK8H6A5_400x400.jpg' />
                 
             </div>
             <hr/>
