--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
             <div>I am a B.Tech CSE student at IIITKLY</div>
             <hr/>
             <div class="footer">
-                
+                This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times. 
             </div>
         </div>    
         <script type="text/javascript" src="/ui/main.js">
