--- a/ui/index.html
+++ b/ui/index.html
@@ -17,8 +17,12 @@
             <div>I am a B.Tech CSE student at IIITKLY</div>
             <hr/>
             <div class="footer">
-                This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times. 
-            </div>
+                This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times.
+            <hr/>
+            <input type="text" id="name" placeholder="name"></input>
+            <input type="submit" value="Submit"></input>
+           
+           </div>
         </div>    
         <script type="text/javascript" src="/ui/main.js">
         </script>
