--- a/ui/index.html
+++ b/ui/index.html
@@ -19,9 +19,13 @@
             <div class="footer">
                 This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times.
             <hr/>
-            <input type="text" id="name" placeholder="name"></input>
-            <input type="submit" value="Submit"></input>
-           
+            <input type="text" id="name" placeholder="name">
+            <input type="submit" value="Submit">
+            <ul>
+                <li>Name 1</li>
+                <li>Name 2</li>
+                <li>Name 3</li>
+            </ul>
            </div>
         </div>    
         <script type="text/javascript" src="/ui/main.js">
