--- a/ui/index.html
+++ b/ui/index.html
@@ -20,11 +20,9 @@
                 This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times.
             <hr/>
             <input type="text" id="name" placeholder="name">
-            <input type="submit" value="Submit">
-            <ul>
-                <li>Name 1</li>
-                <li>Name 2</li>
-                <li>Name 3</li>
+            <input id="submit_btn" type="submit" value="Submit">
+            <ul id="namelist">
+
             </ul>
            </div>
         </div>    
